update the name of website

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Kakusi's Study Notes
+title: Kakusi Lin
 
 # Short description of your site
 description: Study notes for machine learning, deep learning, statistics and data visualization. To tracing my learning steps. 
