--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,7 @@ round-avatar: true
 # then specify the following parameter
 #title-img: /path/to/image
 
+favicon: "/img/favicon.ico"
 
 
 # Select the social network links that you want to show in the footer.
