[update] fix favicon

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ round-avatar: true
 # then specify the following parameter
 #title-img: /path/to/image
 
-favicon: "/img/favicon.ico"
+favicon: "/assets/img/favicon.ico"
 
 
 # Select the social network links that you want to show in the footer.
